--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     </head>
     <link rel="stylesheet" href="style.css">
     <body>
-        
+        <header>
+            <nav>
+                
+            </nav>
+        </header>
     </body>
 </html>
