--- a/index.html
+++ b/index.html
@@ -8,12 +8,57 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Epilogue:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inter:wght@400;500;600;700;800;900&family=Nunito:wght@400;500;600;700;800;900&family=Public+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     </head>
+    <title>CORPERS-LODGE</title>
     <link rel="stylesheet" href="style.css">
     <body>
         <header>
-            <nav>
-                
-            </nav>
-        </header>
-    </body>
-</html>
+            <nav class="navbar-cont">
+                <div class="header-bar" >
+                    <div class="header-left">
+                        <img class="corpers-lodge-img" src="./image/Corpers lodge.svg" alt="corpers-lodge">
+                    </div>
+                    <div class="toggle-bar">
+                        <img src="./image/bars-solid.svg" alt="bars">
+                    </div>
+                </div>
+                <div class="header-right">
+                    <ul>
+                        <li>
+                            <a class="link-a" href="#">Home</a>
+                        </li>
+                        <li>
+                            <a class="link-a" href="#">Listing</a>
+                        </li>
+                        <li>
+                            <a class="link-a" href="#">About Us</a>
+                        </li>
+                        <li>
+                            <a class="link-a" href="#">Contact</a>
+                        </li>
+                        <li class="sign-up-btn">
+                            <a class="link-a" href="#">Sign Up</a>
+                        </li>
+                    </ul>
+                    <div class="header-toggle">
+                        <ul>
+                            <li>
+                                <a class="link-a" href="#">Home</a>
+                            </li>
+                            <li>
+                                <a class="link-a" href="#">Listing</a>
+                            </li>
+                            <li>
+                                <a class="link-a" href="#">About Us</a>
+                            </li>
+                            <li>
+                                <a class="link-a" href="#">Contact</a>
+                            </li>
+                            <li class="sign-up-btn">
+                                <a class="link-a" href="#">Sign Up</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </header>
+        </body>
+    </html>
