--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <header>
             <nav class="navbar-cont">
-                <div class="header-bar" >
+                <div class="header-bar">
                     <div class="header-left">
                         <img class="corpers-lodge-img" src="./image/Corpers lodge.svg" alt="corpers-lodge">
                     </div>
@@ -26,8 +26,27 @@
                         <li>
                             <a class="link-a" href="#">Home</a>
                         </li>
-                        <li>
+                        <li class="drop-down">
                             <a class="link-a" href="#">Listing</a>
+                            <div class="dropdown-cont">
+                                <ul>
+                                    <li>
+                                        <a class="drop-img" href="#">
+                                            <img src="./image/house -listing.svg" alt="">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="drop-img" href="#">
+                                            <img src="./image/corpers hang.svg" alt="">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="drop-img" href="#">
+                                            <img src="./image/hotel listing.svg" alt="">
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </li>
                         <li>
                             <a class="link-a" href="#">About Us</a>
@@ -36,7 +55,7 @@
                             <a class="link-a" href="#">Contact</a>
                         </li>
                         <li class="sign-up-btn">
-                            <a class="link-a" href="#">Sign Up</a>
+                            <a class="sign-btn" href="#">Sign Up</a>
                         </li>
                     </ul>
                     <div class="header-toggle">
@@ -54,7 +73,7 @@
                                 <a class="link-a" href="#">Contact</a>
                             </li>
                             <li class="sign-up-btn">
-                                <a class="link-a" href="#">Sign Up</a>
+                                <a class="sign-btn" href="#">Sign Up</a>
                             </li>
                         </ul>
                     </div>
