--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <li class="drop-down">
                             <a class="link-a" href="#">Listing</a>
                             <div class="dropdown-cont">
-                                <ul>
+                                <ul class="drop-content">
                                     <li>
                                         <a class="drop-img" href="#">
                                             <img src="./image/house -listing.svg" alt="">
@@ -63,8 +63,27 @@
                             <li>
                                 <a class="link-a" href="#">Home</a>
                             </li>
-                            <li>
+                            <li class="drop-down">
                                 <a class="link-a" href="#">Listing</a>
+                                <div class="dropdown-cont">
+                                    <ul class="drop-content">
+                                        <li>
+                                            <a class="drop-img" href="#">
+                                                <img src="./image/house -listing.svg" alt="">
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="drop-img" href="#">
+                                                <img src="./image/corpers hang.svg" alt="">
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a class="drop-img" href="#">
+                                                <img src="./image/hotel listing.svg" alt="">
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
                             </li>
                             <li>
                                 <a class="link-a" href="#">About Us</a>
@@ -79,5 +98,12 @@
                     </div>
                 </nav>
             </header>
+            <section class="section-1">
+                <div class="section-text">
+                    <h1 class="text-text">Providing Solutions To Housimg Needs In Your
+                        <span class="color">Community</span>
+                    </h1>
+                </div>
+            </section>
         </body>
     </html>
