card styling for mobile complete

--- a/homepage.html
+++ b/homepage.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300&display=swap" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/Corpers-Lodge/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -14,46 +17,287 @@
       referrerpolicy="no-referrer"
     />
     <title>Corpers Lodge</title>
-</head>
-<body>
-    
+  </head>
+  <body>
     <header>
-        <nav>
-            <div class="imgContainer">
-                <img src="/images/Corpers lodgecorperslodge-logo.svg" alt="">
-            </div>
-            
-            <div class="ul_signup">
-                <ul>
-                    <li>
-                        <a href="#">Home</a>
-                    </li>
-                    <li>
-                        <a href="#">Listing</a>
-                    </li>
-                    <li>
-                        <a href="#">About Us</a>
-                    </li>
-                    <li>
-                        <a href="#">Contact</a>
-                    </li>
-                    <li>
-                        <a href="#">Login</a>
-                    </li>
-                </ul>
+      <nav>
+        <div class="imgContainer">
+          <img
+            src="/Corpers-Lodge/images/Corpers lodgecorperslodge-logo.svg"
+            alt=""
+          />
+        </div>
 
-                <div class="btnContainer">
-                    <button>
-                        <a href="#">Sign Up</a>
-                    </button>
-                </div>
-            </div>
+        <div class="ul_signup">
+          <ul>
+            <li>
+              <a href="#">Home</a>
+            </li>
+            <li>
+              <a href="#">Listing</a>
+            </li>
+            <li>
+              <a href="#">About Us</a>
+            </li>
+            <li>
+              <a href="#">Contact</a>
+            </li>
+            <li>
+              <a href="#">Login</a>
+            </li>
+          </ul>
 
-            <div class="bars">
-                <i style="color: hsla(262, 52%, 11%, 1)" class="fas fa-bars icons"></i>
-              </div>
-        </nav>
+          <div class="btnContainer" style="transform: translateY(-15%)">
+            <a href="#">
+              <button>Sign Up</button>
+            </a>
+          </div>
+        </div>
+
+        <div class="bars">
+          <i class="fas fa-bars icons"></i>
+        </div>
+      </nav>
     </header>
-q
-</body>
+
+    <section class="section1">
+      <div class="introhome_introtext">
+        <div class="introhome_container">
+          <img
+            src="/Corpers-Lodge/images/pexels-george-becker-129494 1introhome.svg"
+            alt=""
+          />
+        </div>
+
+        <div class="introtext">
+          <h1>Find your perfect home <span class="anywhere">Anywhere</span></h1>
+          <p>
+            You may be relocating to a new place, anticipating your service
+            year, or have been assigned to your Primary Place of Assignment.
+            Corpers Lodge is ready to help you find a comfortable and affordable
+            place to stay.
+          </p>
+          <div class="btnContainer2">
+            <div>
+              <a href="#"><button class="getStartedBtn">Get Started</button></a>
+            </div>
+            <div>
+              <a href="#"><button class="learnMoreBtn">Learn More</button></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section2">
+      <div class="img_introhome2">
+        <div class="empty_introhome2">
+          <div class="empty"></div>
+          <div class="introhome2">
+            <img src="/Corpers-Lodge/images/introhome2.svg" alt="" />
+          </div>
+        </div>
+
+        <div>
+          <h2>Enjoy Luxury Apartment at Affordable Prices</h2>
+          <p>
+            Hello Corper, You don't have to be concerned about finding an
+            apartment; we can assist you in finding a comfortable accommodation
+            without breaking the bank.
+          </p>
+          <div class="btnContainer2">
+            <div>
+              <a href="#"
+                ><button style="padding: 0.8rem 1.9rem" class="getStartedBtn">
+                  View Apartment
+                </button></a
+              >
+            </div>
+            <div>
+              <a href="#"
+                ><button class="learnMoreBtn">Check Apartment</button></a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section3">
+      <h5>Recommendations for you</h5>
+      <div class="cardParent">
+        <div class="card">
+          <div class="homePicture">
+            <img src="/images/Rectangle 195radissonblu-home.svg" alt="" />
+          </div>
+
+          <div class="houseName_location_amenities">
+            <span class="houseName">Radisson Blu</span> <br />
+            <span class="location">Ikeja, Lagos</span>
+            <div class="amenities">
+              <div>
+                <img src="/images/Vectorbed.svg" alt="" /><span
+                  class="mainAmenity"
+                  >Bedroom</span
+                >
+              </div>
+              <div>
+                <img src="/images/Framemast.svg" alt="" /><span
+                  class="mainAmenity"
+                  >Tower</span
+                >
+              </div>
+              <div>
+                <img src="/images/Vectorshower.svg" alt="" /><span
+                  class="mainAmenity"
+                  >Heater</span
+                >
+              </div>
+              <div>
+                <img src="/images/Groupparking.svg" alt="" /><span
+                  class="mainAmenity"
+                  >Parking</span
+                >
+              </div>
+              <div>
+                <img src="/images/Framewifi.svg" alt="" /><span
+                  class="mainAmenity"
+                  >WiFi</span
+                >
+              </div>
+              <div>
+                <img src="/images/Frameswimming.svg" alt="" /><span
+                  class="mainAmenity"
+                  >Pool</span
+                >
+              </div>
+            </div>
+            <ul>
+                <li class="rate"> &#8358;50k/Night</li>
+                <li>
+                    <a href="#">
+                        <button>View Availability</button>
+                    </a>
+                  </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="homePicture">
+            <img src="/images/Rectangle 195radissonblu-home.svg" alt="" />
+          </div>
+
+          <div class="houseName_location_amenities">
+            <span class="houseName">Green Legacy</span> <br />
+            <span class="location">OOPL, Abeokuta</span>
+            <div class="amenities">
+              <div>
+                <img src="/images/Vectorbed.svg" alt="" /><span
+                  class="mainAmenity"
+                  >Bedroom</span
+                >
+              </div>
+              <div>
+                <img src="/images/Framemast.svg" alt="" /><span
+                  class="mainAmenity"
+                  >Tower</span
+                >
+              </div>
+              <div>
+                <img src="/images/Vectorshower.svg" alt="" /><span
+                  class="mainAmenity"
+                  >Heater</span
+                >
+              </div>
+              <div>
+                <img src="/images/Groupparking.svg" alt="" /><span
+                  class="mainAmenity"
+                  >Parking</span
+                >
+              </div>
+              <div>
+                <img src="/images/Framewifi.svg" alt="" /><span
+                  class="mainAmenity"
+                  >WiFi</span
+                >
+              </div>
+              <div>
+                <img src="/images/Frameswimming.svg" alt="" /><span
+                  class="mainAmenity"
+                  >Pool</span
+                >
+              </div>
+            </div>
+            <ul>
+                <li class="rate"> &#8358;36k/Night</li>
+                <li>
+                    <a href="#">
+                        <button>View Availability</button>
+                    </a>
+                  </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="homePicture">
+            <img src="/images/Rectangle 195radissonblu-home.svg" alt="" />
+          </div>
+
+          <div class="houseName_location_amenities">
+            <span class="houseName">Park Inn</span> <br />
+            <span class="location">Kuto, Abeokuta</span>
+            <div class="amenities">
+              <div>
+                <img src="/images/Vectorbed.svg" alt="" /><span
+                  class="mainAmenity"
+                  >Bedroom</span
+                >
+              </div>
+              <div>
+                <img src="/images/Framemast.svg" alt="" /><span
+                  class="mainAmenity"
+                  >Tower</span
+                >
+              </div>
+              <div>
+                <img src="/images/Vectorshower.svg" alt="" /><span
+                  class="mainAmenity"
+                  >Heater</span
+                >
+              </div>
+              <div>
+                <img src="/images/Groupparking.svg" alt="" /><span
+                  class="mainAmenity"
+                  >Parking</span
+                >
+              </div>
+              <div>
+                <img src="/images/Framewifi.svg" alt="" /><span
+                  class="mainAmenity"
+                  >WiFi</span
+                >
+              </div>
+              <div>
+                <img src="/images/Frameswimming.svg" alt="" /><span
+                  class="mainAmenity"
+                  >Pool</span
+                >
+              </div>
+            </div>
+            <ul>
+                <li class="rate"> &#8358;76k/Night</li>
+                <li>
+                    <a href="#">
+                        <button>View Availability</button>
+                    </a>
+                  </li>
+            </ul>
+            <p>Hello This is Bolarinwa doing his stuffs</p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
