styled city card with on hover

--- a/homepage.html
+++ b/homepage.html
@@ -173,12 +173,12 @@
               </div>
             </div>
             <ul>
-                <li class="rate"> &#8358;50k/Night</li>
-                <li>
-                    <a href="#">
-                        <button>View Availability</button>
-                    </a>
-                  </li>
+              <li class="rate">&#8358;50k/Night</li>
+              <li>
+                <a href="#">
+                  <button>View Availability</button>
+                </a>
+              </li>
             </ul>
           </div>
         </div>
@@ -230,12 +230,12 @@
               </div>
             </div>
             <ul>
-                <li class="rate"> &#8358;36k/Night</li>
-                <li>
-                    <a href="#">
-                        <button>View Availability</button>
-                    </a>
-                  </li>
+              <li class="rate">&#8358;36k/Night</li>
+              <li>
+                <a href="#">
+                  <button>View Availability</button>
+                </a>
+              </li>
             </ul>
           </div>
         </div>
@@ -287,17 +287,33 @@
               </div>
             </div>
             <ul>
-                <li class="rate"> &#8358;76k/Night</li>
-                <li>
-                    <a href="#">
-                        <button>View Availability</button>
-                    </a>
-                  </li>
+              <li class="rate">&#8358;76k/Night</li>
+              <li>
+                <a href="#">
+                  <button>View Availability</button>
+                </a>
+              </li>
             </ul>
-            <p>Hello This is Bolarinwa doing his stuffs</p>
-          </div>
+          
         </div>
+    </div>
+
+    <a href="#">
+      <button>See More</button>
+    </a>
       </div>
+    </section>
+
+    <section class="section4">
+        <h5>Corpers Lodge</h5>
+        <p>Looking for Corpers Lodge in your community</p>
+
+        <div class="parentCity">
+            <div class="image_container">
+                <div class="city_img"><img class="img_equilibrium" src="/images/Rectangle 102lagos-corperslodge.svg" alt=""></div>
+                <span class="city_name_view_container"><p class="city_name_view">LAGOS</p></span>
+            </div>
+        </div>
     </section>
   </body>
 </html>
