section4-styled city card with on hover complete

--- a/homepage.html
+++ b/homepage.html
@@ -313,7 +313,74 @@
                 <div class="city_img"><img class="img_equilibrium" src="/images/Rectangle 102lagos-corperslodge.svg" alt=""></div>
                 <span class="city_name_view_container"><p class="city_name_view">LAGOS</p></span>
             </div>
+            <div class="image_container">
+                <div class="city_img"><img class="img_equilibrium" src="/images/Rectangle 103kogi-corperslodge.svg" alt=""></div>
+                <span class="city_name_view_container"><p class="city_name_view">KOGI</p></span>
+            </div>
+            <div class="image_container">
+                <div class="city_img"><img class="img_equilibrium" src="/images/Rectangle 104ibadan-corperslodge.svg" alt=""></div>
+                <span class="city_name_view_container"><p class="city_name_view">IBADAN</p></span>
+            </div>
+            <div class="image_container">
+                <div class="city_img"><img class="img_equilibrium" src="/images/Rectangle 105abuja-corperslodge.svg" alt=""></div>
+                <span class="city_name_view_container"><p class="city_name_view">ABUJA</p></span>
+            </div>
+            <div class="image_container">
+                <div class="city_img"><img class="img_equilibrium" src="/images/Rectangle 106ogun-corperslodge.svg" alt=""></div>
+                <span class="city_name_view_container"><p class="city_name_view">OGUN</p></span>
+            </div>
+            <div class="image_container">
+                <div class="city_img"><img class="img_equilibrium" src="/images/Rectangle 107akwaibom-corperslodge.svg" alt=""></div>
+                <span class="city_name_view_container"><p class="city_name_view">AKWA-IBOM</p></span>
+            </div>
+            <div class="image_container">
+                <div class="city_img"><img class="img_equilibrium" src="/images/Rectangle 108akure-corperslodge.svg" alt=""></div>
+                <span class="city_name_view_container"><p class="city_name_view">AKURE</p></span>
+            </div>
+            <div class="image_container">
+                <div class="city_img"><img class="img_equilibrium" src="/images/Rectangle 109kaduna-corperslodge.svg" alt=""></div>
+                <span class="city_name_view_container"><p class="city_name_view">KADUNA</p></span>
+            </div>
         </div>
     </section>
+
+    <footer>
+        <div>
+            <img src="/" alt="">
+        </div>
+        <div class="faq">
+            <div class="question">
+                <h3>What is JavaScript?</h3>
+                <i class="fa-solid fa-angle-down"></i>
+            </div>
+            <div class="answer">
+                <p>
+                    JavaScript is a scripting or programming language that allows you to implement complex features on web pages — every time a web page does more than just sit there and display static information for you to look at — displaying timely content updates, interactive maps, animated 2D/3D graphics, scrolling video jukeboxes, etc. — you can bet that JavaScript is probably involved. It is the third layer of the layer cake of standard web technologies, two of which (HTML and CSS) we have covered in much more detail in other parts of the Learning Area.
+                </p>
+            </div>
+        </div>
+        <div class="faq">
+            <div class="question">
+                <h3>Is it easy to learn JavaScript?</h3>
+                <i class="fa-solid fa-angle-down"></i>
+            </div>
+            <div class="answer">
+                <p>
+                    Arguably, JavaScript is one of the easiest programming languages to learn, so it serves as a great first language for anyone brand new to coding. Even the most complex lines of JavaScript code can be written one by one, in fragments. It can also be tested in the web browser at the same time.
+                </p>
+            </div>
+        </div>
+        <div class="faq">
+            <div class="question">
+                <h3>What is web development?</h3>
+                <i class="fa-solid fa-angle-down"></i>
+            </div>
+            <div class="answer">
+                <p>
+                    Web development is the building and maintenance of websites; it’s the work that happens behind the scenes to make a website look great, work fast and perform well with a seamless user experience.
+                </p>
+            </div>
+        </div>
+    </footer>
   </body>
 </html>
