--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
                             <div class="dropdown-cont">
                                 <ul class="drop-content">
                                     <li>
-                                        <a class="drop-img" href="#">
+                                        <a class="drop-img" href="#11">
                                             <img src="./image/house -listing.svg" alt="">
                                         </a>
                                     </li>
                                     <li>
-                                        <a class="drop-img" href="#">
+                                        <a class="drop-img2" href="#12">
                                             <img src="./image/corpers hang.svg" alt="">
                                         </a>
                                     </li>
                                     <li>
-                                        <a class="drop-img" href="#">
+                                        <a class="drop-img3" href="#13">
                                             <img src="./image/hotel listing.svg" alt="">
                                         </a>
                                     </li>
@@ -99,10 +99,100 @@
                 </nav>
             </header>
             <section class="section-1">
-                <div class="section-text">
-                    <h1 class="text-text">Providing Solutions To Housimg Needs In Your
-                        <span class="color">Community</span>
-                    </h1>
+                <div class="section-bolt">
+                    <div class="part1">
+                        <div class="part">
+                            <div class="section-text">
+                                <h1 class="text-text">
+                                    Providing Solutions To Housing Needs In Your
+                                    <span class="color-text">Community</span>
+                                </h1>
+                            </div>
+                            <div class="paragraph">
+                                <p class="para-text">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quam feugiat in lacus tristique. Penatibus lobortis nunc pellentesque augue bibendum auctor sed. Proin scelerisque scelerisque mauris sagittis nunc, cras mauris elit. Condimentum habitasse facilisis amet varius sit nec nibh.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="btns">
+                            <button class="btn1">Join The Team</button>
+                            <button class="btn2">Learn More</button>
+                        </div>
+                    </div>
+                    <div class="img-cont">
+                        <img class="image-1" src="./image/group-image.png" alt="">
+                    </div>
+                </div>
+            </section>
+            <section class="scetion-2">
+                <!-- 
+                <main class="main-stream">
+                    <div class="back-ground">
+                        <div class="width-class">
+                            <div class="back-ground-top">
+                                <div class="parse">
+                                    <img src="./image/house.svg" alt="">
+                                </div>
+                                <div class="texts">
+                                    Rent A
+                                    <span class="apartment">Apartment</span>
+                                </div>
+                            </div>
+                            <div class="holder">
+                                <p class="Lorem">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quam feugiat in lacus tristique. Penatibus lobortis nunc pellentesque augue bibendum auctor sed. Proin scelerisque scelerisque mauris sagittis nunc, cras mauris elit. Condimentum habitasse facilisis amet varius sit nec nibh.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="back-ground">
+                        <div class="width-class2">
+                            <div class="back-ground-top">
+                                <div class="parse">
+                                    <img src="./image/house.svg" alt="">
+                                </div>
+                                <div class="texts">
+                                    Corper's Lodge
+                                </div>
+                            </div>
+                            <div class="holder">
+                                <p class="Lorem">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quam feugiat in lacus tristique. Penatibus lobortis nunc pellentesque augue bibendum auctor sed. Proin scelerisque scelerisque mauris sagittis nunc, cras mauris elit. Condimentum habitasse facilisis amet varius sit nec nibh.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="back-ground">
+                        <div class="width-class3">
+                            <div class="back-ground-top">
+                                <div class="parse">
+                                    <img src="./image/house.svg" alt="">
+                                </div>
+                                <div class="texts">
+                                    Book An Hotel
+                                </div>
+                            </div>
+                            <div class="holder">
+                                <p class="Lorem">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quam feugiat in lacus tristique. Penatibus lobortis nunc pellentesque augue bibendum auctor sed. Proin scelerisque scelerisque mauris sagittis nunc, cras mauris elit. Condimentum habitasse facilisis amet varius sit nec nibh.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </main>-->
+                <div>
+                    <h3>OUR VISION & OUR GOAL</h3>
+                </div>
+                <div class="images-reps">
+                    <div id="11">
+                        <img class="image-rep1" src="./image/Group 372 (1).svg" alt="">
+                    </div>
+                    <div id="12">
+                        <img class="image-rep2" src="./image/Group 373 (1).svg" alt="">
+                    </div>
+                    <div id="13">
+                        <img class="image-rep3" src="./image/andy374.svg" alt="">
+                    </div>
                 </div>
             </section>
         </body>
