--- a/homepage.html
+++ b/homepage.html
@@ -345,42 +345,44 @@
     </section>
 
     <footer>
-        <div>
-            <img src="/" alt="">
+        <div class="footerLogo">
+            <img src="/images/Corpers lodgecorperslodge-logo.svg" alt="">
         </div>
         <div class="faq">
             <div class="question">
-                <h3>What is JavaScript?</h3>
+                <h3>Useful Links</h3>
                 <i class="fa-solid fa-angle-down"></i>
             </div>
             <div class="answer">
-                <p>
-                    JavaScript is a scripting or programming language that allows you to implement complex features on web pages — every time a web page does more than just sit there and display static information for you to look at — displaying timely content updates, interactive maps, animated 2D/3D graphics, scrolling video jukeboxes, etc. — you can bet that JavaScript is probably involved. It is the third layer of the layer cake of standard web technologies, two of which (HTML and CSS) we have covered in much more detail in other parts of the Learning Area.
-                </p>
-            </div>
-        </div>
-        <div class="faq">
-            <div class="question">
-                <h3>Is it easy to learn JavaScript?</h3>
-                <i class="fa-solid fa-angle-down"></i>
-            </div>
-            <div class="answer">
-                <p>
-                    Arguably, JavaScript is one of the easiest programming languages to learn, so it serves as a great first language for anyone brand new to coding. Even the most complex lines of JavaScript code can be written one by one, in fragments. It can also be tested in the web browser at the same time.
-                </p>
+                <p>Product Categories</p>
+                <p>Special Offer</p>
+                <p>Advertise here</p>
             </div>
         </div>
         <div class="faq">
             <div class="question">
-                <h3>What is web development?</h3>
+                <h3>Information</h3>
                 <i class="fa-solid fa-angle-down"></i>
             </div>
             <div class="answer">
-                <p>
-                    Web development is the building and maintenance of websites; it’s the work that happens behind the scenes to make a website look great, work fast and perform well with a seamless user experience.
-                </p>
+                <p>About Us</p>
+                <p>Career</p>
+                <p>Office</p>
+            </div>
+        </div>
+        <div class="faq">
+            <div class="question">
+                <h3>Support</h3>
+                <i class="fa-solid fa-angle-down"></i>
+            </div>
+            <div class="answer">
+                <p>FAQs</p>
+                <p>Support Center</p>
+                <p>Customer Care</p>
             </div>
         </div>
     </footer>
+
+    <script src="/Corpers-Lodge/js/footer.js"></script>
   </body>
 </html>
