--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
                             <div class="dropdown-cont">
                                 <ul class="drop-content">
                                     <li>
-                                        <a class="drop-img" href="#11">
+                                        <a class="drop-img" href="#">
                                             <img src="./image/house -listing.svg" alt="">
                                         </a>
                                     </li>
                                     <li>
-                                        <a class="drop-img2" href="#12">
+                                        <a class="drop-img2" href="#">
                                             <img src="./image/corpers hang.svg" alt="">
                                         </a>
                                     </li>
                                     <li>
-                                        <a class="drop-img3" href="#13">
+                                        <a class="drop-img3" href="#">
                                             <img src="./image/hotel listing.svg" alt="">
                                         </a>
                                     </li>
@@ -195,5 +195,102 @@
                     </div>
                 </div>
             </section>
+            <section class="section-3">
+                <div>
+                    <h3>OUR VISION & OUR GOAL</h3>
+                </div>
+                <div class="img-adam">
+                    <div class="adam">
+                        <img src="./image/testimonial 2.svg" alt="" class="adam-img">
+                    </div>
+                    <div class="adam">
+                        <img src="./image/testimonial 2.svg" alt="" class="adam-img">
+                    </div>
+                    <div class="adam">
+                        <img src="./image/testimonial 2.svg" alt="" class="adam-img">
+                    </div>
+                </div>
+            </section>
+            <footer>
+                <section class="footer-sect">
+                    <div class="logo">
+                        <img class="corpers-lodge-img" src="./image/Corpers lodge.svg" alt="corpers-lodge">
+                    </div>
+                    <div class="line1">
+                        <ul class="line1-ul">
+                            <li>
+                                <a class="link-b" href="">
+                                    <h4>Useful Link</h4>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="link-b" href="">Product Categories</a>
+                            </li>
+                            <li>
+                                <a class="link-b" href="">Special Offer</a>
+                            </li>
+                            <li>
+                                <a class="link-b" href="">Advertise Here</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="line2">
+                        <ul class="line2-ul">
+                            <li>
+                                <a class="link-b" href="">
+                                    <h4>Information</h4>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="link-b" href="">About Us</a>
+                            </li>
+                            <li>
+                                <a class="link-b" href="">Career</a>
+                            </li>
+                            <li>
+                                <a class="link-b" href="">Office</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="line3">
+                        <ul class="line3-ul">
+                            <li class="">
+                                <a class="link-b" href="">
+                                    <h4>Support</h4>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="link-b" href="">FAQs</a>
+                            </li>
+                            <li>
+                                <a class="link-b" href="">Support Center</a>
+                            </li>
+                            <li>
+                                <a class="link-b" href="">Customer Care</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="line4">
+                        <div class="img-src">
+                            <a class="link-s" href="https://www.facebook.com/">
+                                <img class="jpeg" src="./image/facebook.svg" alt="">
+                            </a>
+                            <a class="link-s" href="https://www.twitter.com/">
+                                <img class="jpeg" src="./image/twitter.svg" alt="">
+                            </a>
+                            <a class="link-s" href="https://www.instagram.com/">
+                                <img class="jpeg" src="./image/instagram.svg" alt="">
+                            </a>
+                            <a class="link-s" href="https://www.linked-in.com/">
+                                <img class="jpeg" src="./image/linked-in.svg" alt="">
+                            </a>
+                        </div>
+                        <p class="sub">
+                            No 16, Jire Aradi Street
+                        </p>
+                        <p class="sub">Orogun Abeokuta</p>
+                    </div>
+                </section>
+            </footer>
         </body>
     </html>
