added progress bar

--- a/homepage.html
+++ b/homepage.html
@@ -58,6 +58,9 @@
           <i class="fas fa-bars icons"></i>
         </div>
       </nav>
+      <div class="progress-container">
+        <div class="progress-bar" id="myBar"></div>
+      </div>
     </header>
 
     <section class="section1">
@@ -383,6 +386,7 @@
         </div>
     </footer>
 
+    <script src="/Corpers-Lodge/js/header.js"></script>
     <script src="/Corpers-Lodge/js/footer.js"></script>
   </body>
 </html>
