--- a/homepage.html
+++ b/homepage.html
@@ -28,7 +28,7 @@
           />
         </div>
 
-        <div class="ul_signup">
+        <div id="menu_bar" class="ul_signup">
           <ul>
             <li>
               <a href="#">Home</a>
@@ -53,9 +53,9 @@
             </a>
           </div>
         </div>
-
-        <div class="bars">
-          <i class="fas fa-bars icons"></i>
+        
+        <div class="menu">
+          <i class="fas fa-bars bar" id="hamburger" onclick="onClickMenu()"></i>
         </div>
       </nav>
       <div class="progress-container">
@@ -386,7 +386,7 @@
         </div>
     </footer>
 
-    <script src="/Corpers-Lodge/js/header.js"></script>
-    <script src="/Corpers-Lodge/js/footer.js"></script>
+    <script src="/Corpers-Lodge/js/header.js" async defer></script>
+    <script src="/Corpers-Lodge/js/footer.js" async defer></script>
   </body>
 </html>
