--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a class="drop-img" href="#">
+                                            <a class="drop-img2" href="#">
                                                 <img src="./image/corpers hang.svg" alt="">
                                             </a>
                                         </li>
                                         <li>
-                                            <a class="drop-img" href="#">
+                                            <a class="drop-img3" href="#">
                                                 <img src="./image/hotel listing.svg" alt="">
                                             </a>
                                         </li>
@@ -96,36 +96,37 @@
                             </li>
                         </ul>
                     </div>
-                </nav>
-            </header>
-            <section class="section-1">
-                <div class="section-bolt">
-                    <div class="part1">
-                        <div class="part">
-                            <div class="section-text">
-                                <h1 class="text-text">
-                                    Providing Solutions To Housing Needs In Your
-                                    <span class="color-text">Community</span>
-                                </h1>
-                            </div>
-                            <div class="paragraph">
-                                <p class="para-text">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quam feugiat in lacus tristique. Penatibus lobortis nunc pellentesque augue bibendum auctor sed. Proin scelerisque scelerisque mauris sagittis nunc, cras mauris elit. Condimentum habitasse facilisis amet varius sit nec nibh.
-                                </p>
-                            </div>
+                </div>
+            </nav>
+        </header>
+        <section class="section-1">
+            <div class="section-bolt">
+                <div class="part1">
+                    <div class="part">
+                        <div class="section-text">
+                            <h1 class="text-text">
+                                Providing Solutions To Housing Needs In Your
+                                <span class="color-text">Community</span>
+                            </h1>
                         </div>
-                        <div class="btns">
-                            <button class="btn1">Join The Team</button>
-                            <button class="btn2">Learn More</button>
+                        <div class="paragraph">
+                            <p class="para-text">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quam feugiat in lacus tristique. Penatibus lobortis nunc pellentesque augue bibendum auctor sed. Proin scelerisque scelerisque mauris sagittis nunc, cras mauris elit. Condimentum habitasse facilisis amet varius sit nec nibh.
+                            </p>
                         </div>
                     </div>
-                    <div class="img-cont">
-                        <img class="image-1" src="./image/group-image.png" alt="">
+                    <div class="btns">
+                        <button class="btn1">Join The Team</button>
+                        <button class="btn2">Learn More</button>
                     </div>
                 </div>
-            </section>
-            <section class="scetion-2">
-                <!-- 
+                <div class="img-cont">
+                    <img class="image-1" src="./image/group-image.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section class="section-2">
+            <!-- 
                 <main class="main-stream">
                     <div class="back-ground">
                         <div class="width-class">
@@ -180,117 +181,117 @@
                         </div>
                     </div>
                 </main>-->
-                <div>
-                    <h3>OUR VISION & OUR GOAL</h3>
+            <div>
+                <h3>OUR VISION & OUR GOAL</h3>
+            </div>
+            <div class="images-reps">
+                <div id="11">
+                    <img class="image-rep1" src="./image/Group 372 (1).svg" alt="">
                 </div>
-                <div class="images-reps">
-                    <div id="11">
-                        <img class="image-rep1" src="./image/Group 372 (1).svg" alt="">
+                <div id="12">
+                    <img class="image-rep2" src="./image/Group 373 (1).svg" alt="">
+                </div>
+                <div id="13">
+                    <img class="image-rep3" src="./image/andy374.svg" alt="">
+                </div>
+            </div>
+        </section>
+        <section class="section-3">
+            <div>
+                <h3>OUR VISION & OUR GOAL</h3>
+            </div>
+            <div class="img-adam">
+                <div class="adam">
+                    <img src="./image/testimonial 2.svg" alt="" class="adam-img">
+                </div>
+                <div class="adam">
+                    <img src="./image/testimonial 2.svg" alt="" class="adam-img">
+                </div>
+                <div class="adam">
+                    <img src="./image/testimonial 2.svg" alt="" class="adam-img">
+                </div>
+            </div>
+        </section>
+        <footer>
+            <section class="footer-sect">
+                <div class="logo">
+                    <img class="corpers-lodge-img" src="./image/Corpers lodge.svg" alt="corpers-lodge">
+                </div>
+                <div class="line1">
+                    <ul class="line1-ul">
+                        <li>
+                            <a class="link-b" href="">
+                                <h4>Useful Link</h4>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="link-b" href="">Product Categories</a>
+                        </li>
+                        <li>
+                            <a class="link-b" href="">Special Offer</a>
+                        </li>
+                        <li>
+                            <a class="link-b" href="">Advertise Here</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="line2">
+                    <ul class="line2-ul">
+                        <li>
+                            <a class="link-b" href="">
+                                <h4>Information</h4>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="link-b" href="">About Us</a>
+                        </li>
+                        <li>
+                            <a class="link-b" href="">Career</a>
+                        </li>
+                        <li>
+                            <a class="link-b" href="">Office</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="line3">
+                    <ul class="line3-ul">
+                        <li class="">
+                            <a class="link-b" href="">
+                                <h4>Support</h4>
+                            </a>
+                        </li>
+                        <li>
+                            <a class="link-b" href="">FAQs</a>
+                        </li>
+                        <li>
+                            <a class="link-b" href="">Support Center</a>
+                        </li>
+                        <li>
+                            <a class="link-b" href="">Customer Care</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="line4">
+                    <div class="img-src">
+                        <a class="link-s" href="https://www.facebook.com/">
+                            <img class="jpeg" src="./image/facebook.svg" alt="">
+                        </a>
+                        <a class="link-s" href="https://www.twitter.com/">
+                            <img class="jpeg" src="./image/twitter.svg" alt="">
+                        </a>
+                        <a class="link-s" href="https://www.instagram.com/">
+                            <img class="jpeg" src="./image/instagram.svg" alt="">
+                        </a>
+                        <a class="link-s" href="https://www.linked-in.com/">
+                            <img class="jpeg" src="./image/linked-in.svg" alt="">
+                        </a>
                     </div>
-                    <div id="12">
-                        <img class="image-rep2" src="./image/Group 373 (1).svg" alt="">
-                    </div>
-                    <div id="13">
-                        <img class="image-rep3" src="./image/andy374.svg" alt="">
-                    </div>
+                    <p class="sub">
+                        No 16, Jire Aradi Street
+                    </p>
+                    <p class="sub">Orogun Abeokuta</p>
                 </div>
             </section>
-            <section class="section-3">
-                <div>
-                    <h3>OUR VISION & OUR GOAL</h3>
-                </div>
-                <div class="img-adam">
-                    <div class="adam">
-                        <img src="./image/testimonial 2.svg" alt="" class="adam-img">
-                    </div>
-                    <div class="adam">
-                        <img src="./image/testimonial 2.svg" alt="" class="adam-img">
-                    </div>
-                    <div class="adam">
-                        <img src="./image/testimonial 2.svg" alt="" class="adam-img">
-                    </div>
-                </div>
-            </section>
-            <footer>
-                <section class="footer-sect">
-                    <div class="logo">
-                        <img class="corpers-lodge-img" src="./image/Corpers lodge.svg" alt="corpers-lodge">
-                    </div>
-                    <div class="line1">
-                        <ul class="line1-ul">
-                            <li>
-                                <a class="link-b" href="">
-                                    <h4>Useful Link</h4>
-                                </a>
-                            </li>
-                            <li>
-                                <a class="link-b" href="">Product Categories</a>
-                            </li>
-                            <li>
-                                <a class="link-b" href="">Special Offer</a>
-                            </li>
-                            <li>
-                                <a class="link-b" href="">Advertise Here</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="line2">
-                        <ul class="line2-ul">
-                            <li>
-                                <a class="link-b" href="">
-                                    <h4>Information</h4>
-                                </a>
-                            </li>
-                            <li>
-                                <a class="link-b" href="">About Us</a>
-                            </li>
-                            <li>
-                                <a class="link-b" href="">Career</a>
-                            </li>
-                            <li>
-                                <a class="link-b" href="">Office</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="line3">
-                        <ul class="line3-ul">
-                            <li class="">
-                                <a class="link-b" href="">
-                                    <h4>Support</h4>
-                                </a>
-                            </li>
-                            <li>
-                                <a class="link-b" href="">FAQs</a>
-                            </li>
-                            <li>
-                                <a class="link-b" href="">Support Center</a>
-                            </li>
-                            <li>
-                                <a class="link-b" href="">Customer Care</a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="line4">
-                        <div class="img-src">
-                            <a class="link-s" href="https://www.facebook.com/">
-                                <img class="jpeg" src="./image/facebook.svg" alt="">
-                            </a>
-                            <a class="link-s" href="https://www.twitter.com/">
-                                <img class="jpeg" src="./image/twitter.svg" alt="">
-                            </a>
-                            <a class="link-s" href="https://www.instagram.com/">
-                                <img class="jpeg" src="./image/instagram.svg" alt="">
-                            </a>
-                            <a class="link-s" href="https://www.linked-in.com/">
-                                <img class="jpeg" src="./image/linked-in.svg" alt="">
-                            </a>
-                        </div>
-                        <p class="sub">
-                            No 16, Jire Aradi Street
-                        </p>
-                        <p class="sub">Orogun Abeokuta</p>
-                    </div>
-                </section>
-            </footer>
-        </body>
-    </html>
+        </footer>
+    </body>
+</html>
