--- a/homepage.html
+++ b/homepage.html
@@ -101,7 +101,7 @@
           </div>
         </div>
 
-        <div>
+        <div class="h2_p_btnContainer2">
           <h2>Enjoy Luxury Apartment at Affordable Prices</h2>
           <p>
             Hello Corper, You don't have to be concerned about finding an
