--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <title>CORPERS-LODGE</title>
     <link rel="stylesheet" href="style.css">
     <body>
-        <header>
+        <div class="blur_overlay"></div>
+        <header blur-overlay >
             <nav class="navbar-cont">
                 <div class="header-bar">
                     <div class="header-left">
@@ -58,44 +59,47 @@
                             <a class="sign-btn" href="#">Sign Up</a>
                         </li>
                     </ul>
-                    <div class="header-toggle">
-                        <ul>
-                            <li>
-                                <a class="link-a" href="#">Home</a>
-                            </li>
-                            <li class="drop-down">
-                                <a class="link-a" href="#">Listing</a>
-                                <div class="dropdown-cont">
-                                    <ul class="drop-content">
-                                        <li>
-                                            <a class="drop-img" href="#">
-                                                <img src="./image/house -listing.svg" alt="">
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a class="drop-img2" href="#">
-                                                <img src="./image/corpers hang.svg" alt="">
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a class="drop-img3" href="#">
-                                                <img src="./image/hotel listing.svg" alt="">
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li>
-                                <a class="link-a" href="#">About Us</a>
-                            </li>
-                            <li>
-                                <a class="link-a" href="#">Contact</a>
-                            </li>
-                            <li class="sign-up-btn">
-                                <a class="sign-btn" href="#">Sign Up</a>
-                            </li>
-                        </ul>
+                </div>
+                <div class="header-toggle">
+                    <div class="close-menu">
+                        <img class="close-menu" src="./image/xmark-solid.svg" alt="solid">
                     </div>
+                    <ul>
+                        <li>
+                            <a class="link-a" href="#">Home</a>
+                        </li>
+                        <li class="drop-down">
+                            <a class="link-a" href="#">Listing</a>
+                            <div class="dropdown-cont">
+                                <ul class="drop-content">
+                                    <li>
+                                        <a class="drop-img" href="#">
+                                            <img src="./image/house -listing.svg" alt="">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="drop-img2" href="#">
+                                            <img src="./image/corpers hang.svg" alt="">
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="drop-img3" href="#">
+                                            <img src="./image/hotel listing.svg" alt="">
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li>
+                            <a class="link-a" href="#">About Us</a>
+                        </li>
+                        <li>
+                            <a class="link-a" href="#">Contact</a>
+                        </li>
+                        <li class="sign-up-btn">
+                            <a class="sign-btn" href="#">Sign Up</a>
+                        </li>
+                    </ul>
                 </div>
             </nav>
         </header>
@@ -217,6 +221,9 @@
                 <div class="logo">
                     <img class="corpers-lodge-img" src="./image/Corpers lodge.svg" alt="corpers-lodge">
                 </div>
+                <div class="logo1">
+                    <img class="corpers-lodge-img" src="./image/Corpers lodge.svg" alt="corpers-lodge">
+                </div>
                 <div class="line1">
                     <ul class="line1-ul">
                         <li>
@@ -293,5 +300,6 @@
                 </div>
             </section>
         </footer>
+        <script src="./js file/toggle.js" async defer></script>
     </body>
 </html>
