--- a/homepage.html
+++ b/homepage.html
@@ -80,7 +80,7 @@
             Corpers Lodge is ready to help you find a comfortable and affordable
             place to stay.
           </p>
-          <div class="btnContainer2">
+          <div class="btnContainer2" style="width: 80%;">
             <div>
               <a href="#"><button class="getStartedBtn">Get Started</button></a>
             </div>
