--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css">
     <body>
         <div class="blur_overlay"></div>
-        <header blur-overlay >
+        <header blur-overlay>
             <nav class="navbar-cont">
                 <div class="header-bar">
                     <div class="header-left">
@@ -201,8 +201,16 @@
             </div>
         </section>
         <section class="section-3">
+            <div class="head">
+                <h3>REVIEWS
+                 <span class="div-c" >   What Clients Are Saying About Us</span>
+                </h3>
+            </div>
             <div>
-                <h3>OUR VISION & OUR GOAL</h3>
+                <h3>
+                    
+                    
+                </h3>
             </div>
             <div class="img-adam">
                 <div class="adam">
@@ -221,9 +229,7 @@
                 <div class="logo">
                     <img class="corpers-lodge-img" src="./image/Corpers lodge.svg" alt="corpers-lodge">
                 </div>
-                <div class="logo1">
-                    <img class="corpers-lodge-img" src="./image/Corpers lodge.svg" alt="corpers-lodge">
-                </div>
+                <div class="hehe" style="color: #fff;">yhhhhhhh</div>
                 <div class="line1">
                     <ul class="line1-ul">
                         <li>
